hphp/hack/test/typecheck/ignore_readonly_attribute/test_coerce.php.exp
ERROR: File "test_coerce.php", line 17, characters 25-27:
Invalid return type (Typing[4411])
  File "test_coerce.php", line 5, characters 33-58:
  Function readonly return mismatch
  File "test_coerce.php", line 5, characters 33-58:
  This function returns a readonly value
  File "test_coerce.php", line 10, characters 42-58:
  This function does not return a readonly value
